# data_transfer_service_exporter

./: .pre-commit-config.yaml  README.md  main.py  main_test.py  pyproject.toml  requirements.txt
docs/: code-of-conduct.md
examples/: anomaly_detection.sql  arima_model_anomaly_detection.sql
sql/: dcm_dt.sql  displayvideo.sql  google_ads.sql  search_ads.sql
